[build-system]
# Added "hatch-vcs" here so Hatch knows how to talk to Git
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pylcaptcha"
authors = [
    { name = "Yuriy", email = "uravasinski@gmail.com" },
]
description = "A clean, reusable CAPTCHA-bypassing and scraping client"
readme = "README.md"
requires-python = ">=3.8"

# 1. Removed version = "1.0.0"
# 2. Added this line to let Python know the version is managed dynamically:
dynamic = ["version"]

dependencies = [
    "playwright>=1.0.0",
    "curl-cffi>=0.5.0",
    "camoufox",
    "camoufox[geoip]",
    "ultralytics",
    "pydantic"
]

[tool.hatch.version]
source = "vcs"